networkpolicy-study/examples/01-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: example
spec:
  podSelector: {}
  policyTypes:
    - Ingress
